--- a/task_1.html
+++ b/task_1.html
@@ -6,7 +6,7 @@
     <title>task_1</title>
 </head>
 <body>
-    <h1>Student Inforamtion</h1>
+    <h1>Student inforamtion</h1>
 
     <table border ="5">  
         
